--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,13 @@
 # purna's key
 GROQ_API_KEY=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  
+
+# cloudinary
+CLOUDINARY_CLOUD_NAME=dz6ueggth
+CLOUDINARY_API_KEY=415368111739837
+CLOUDINARY_API_SECRET=jQU-T6zWoGRR8R86hfOvr8FE3aw
+
+
+# purna key
+# REPLICATE_API_TOKEN=purna key
+# rohit key
+REPLICATE_API_TOKEN=rohit key
